shesmu-server/src/test/resources/bad/missing-action-param.shesmu

Input gsi_std;


Define standard_fastq(string s)
  Where workflow == {"BamQC 2.7+", 3 }[0]
  Where metatype == "chemical/fastq-gzip"
  Where path == foo(file_size);

Olive
  Call standard_fastq("a")
  Group files = path By accession, donor
  Run fastqc With
    input = files;
